k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-app-service
  labels:
    app: portfolio-app
spec:
  selector:
    app: portfolio-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3002
  type: ClusterIP # Dostępny tylko wewnątrz klastra. Jeśli chcesz NodePort, zmień type.
