k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-app-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - jakub-urbanski.me
      secretName: portfolio-app-tls
  rules:
    - host: jakub-urbanski.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portfolio-app-service
                port:
                  number: 80
